<resources>
    <string name="app_name">Forehead Guessers</string>
    <string name="Category">Category</string>
    <string name="Time">Time</string>
    <string name="Play">Play!</string>
    <string name="GPL">This program is free software: you can redistribute it and/or modify
    it under the terms of the GNU General Public License as published by
    the Free Software Foundation, either version 3 of the License, or
    (at your option) any later version.

    This program is distributed in the hope that it will be useful,
    but WITHOUT ANY WARRANTY; without even the implied warranty of
    MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
    GNU General Public License for more details.</string>


</resources>
