<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/ConstraintLayoutMainActivity"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <LinearLayout
        android:id="@+id/LinearLayoutMainActivity"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center_horizontal"
        android:orientation="vertical">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="8dp"
            android:text="@string/app_name"
            android:textAppearance="@style/TextAppearance.AppCompat.Display3" />

        <Button
            android:id="@+id/categoryButton"
            android:layout_width="260dp"
            android:layout_height="wrap_content"
            android:padding="8dp"
            android:text="@string/Category"
            android:textAppearance="@style/TextAppearance.AppCompat.Display1"
            tools:text="@string/Category" />

        <Button
            android:id="@+id/timeButton"
            android:layout_width="260dp"
            android:layout_height="wrap_content"
            android:padding="8dp"
            android:text="@string/Time"
            android:textAppearance="@style/TextAppearance.AppCompat.Display1" />

        <Button
            android:id="@+id/playButton"
            android:layout_width="260dp"
            android:layout_height="wrap_content"
            android:padding="8dp"
            android:text="@string/Play"
            android:textAppearance="@style/TextAppearance.AppCompat.Display1"
            tools:text="@string/Play" />

        <TextView
            android:id="@+id/textView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="10dp"
            android:text="@string/GPL"
            android:textAppearance="@style/TextAppearance.AppCompat.Small"
            android:textSize="12sp"
            tools:text="@string/GPL" />
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>